feat(X-Ledger): stabilize core engine and professionalize documentation